fix padding overflow on icon

--- a/src/main/scss/style.scss
+++ b/src/main/scss/style.scss
@@ -84,7 +84,6 @@
   position: absolute !important;
   margin-left: -72px !important;
   left: 50%;
-  top: 4px;
 }
 
 .top-logo {
@@ -99,6 +98,7 @@
 .logo-large {
   width: 144px;
   height: 38px;
+  margin: 4px 0px;
 }
 
 .logo-small {
